# library_mannagment_system_drf_phitron

./: .gitignore  README.md  api_test.http  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt  vercel.json
api/: urls.py
books/: admin.py  models.py  permissions.py  serializers.py  views.py
books/migrations/: 0001_initial.py
library_mannagment_system/: asgi.py  settings.py  urls.py  wsgi.py
operations/: models.py  urls.py  views.py
operations/migrations/: 0001_initial.py  0002_borrow_returned.py
users/: models.py
users/migrations/: 0001_initial.py
